--- a/less/styles.less
+++ b/less/styles.less
@@ -10,7 +10,7 @@
   }
 }
 /* Funções FIM */
-div.escondido { display: none; }
+div.escondido { display: none; margin-top: 15px; }
 body {
     //Mesma altura da barra de menus fixa do topo
     padding-top: 70px;
