--- a/less/styles.less
+++ b/less/styles.less
@@ -44,12 +44,23 @@ div#direcoes {
             line-height: 20px; margin-bottom: 10px; cursor: pointer; font-size: 0.875em;
             &:nth-child(even) { color: #F30; }
             ul {
-                list-style: none; margin: 0; padding-top: 0;
+                list-style: none; margin: 0; padding-top: 0; margin-left: -30px;
                 &.escondido { display: none; }
             }
         }
         /* Para a API da OneTripPlanner */
         &[data-api="resultados_otp"] {
+            span.norte_sul {
+                display: inline-block; width: 30px; height: 30px; float: left;
+                &.EAST { background: #333; }
+                &.WEST { background: #F30; }
+                &.NORTH { background: #CCC; }
+                &.NORTHEAST { background: #999; }
+                &.NORTHWEST { background: #333; }
+                &.SOUTH { background: #F30; }
+                &.SOUTHEAST { background: #CCC; }
+                &.SOUTHWWEST { background: #999; }
+            }
             span.direcao {
                 width: 30px; height: 30px; display: inline-block; float: left;
                 &.CIRCLE_CLOCKWISE { background: url('../images/directions/circle_clockwise.png') no-repeat left top; }
