Correção dos links dos icones
Estava a apontar para a pasta errada

--- a/less/styles.less
+++ b/less/styles.less
@@ -70,8 +70,9 @@ div#direcoes {
                 &.SOUTHWWEST { background: #999; }
             }
             span.modos { display: inline-block; width: 20px; height: 20px; margin-right: 10px; float: left; }
-            span.modo_BUS { background: url('../images/map/stop/bus20.png') no-repeat left top; }
-            span.modo_WALK { background: url('../images/map/stop/walk20.png') no-repeat left top; }
+            span.modo_BUS { background: url('../images/ui/trip/mode/bus.png') no-repeat left top; }
+            span.modo_WALK { background: url('../images/ui/trip/mode/walk.png') no-repeat left top; }
+            span.modo_BICYCLE { background: url('../images/ui/trip/mode/bicycle.png') no-repeat left top; }
             span.direcao {
                 width: 30px; height: 30px; display: inline-block; float: left;
                 &.CIRCLE_CLOCKWISE { background: url('../images/directions/circle_clockwise.png') no-repeat left top; }
