Testes pro link

--- a/less/styles.less
+++ b/less/styles.less
@@ -49,12 +49,12 @@ div.info_trip {
         }
         dd {
             &.sub {
-                /**/
             }
             &.link {
                 cursor: pointer;
                 span.baixo:after { content: '↓'; padding-right: 5px; }
                 span.cima:after { content: '↑'; padding-right: 5px; }
+                &:hover { color: #F30; }
             }
         }
         dt.sub, dd.sub { font-size: 0.75em; border-top: 0; display: none; }
