Mais responsividade nas informações
Antes era um float estatico, agora está mais distribuído.
Verificar o border em telas pequenas

--- a/less/styles.less
+++ b/less/styles.less
@@ -41,9 +41,10 @@ div.instrucoes { width: 100px; height: 100px; background: #F30; display: none; }
 div.info_trip {
     border: 1px solid #CCC; padding: 10px; /*display: none;*/
     dl {
+        margin: 0;
         dt, dd { padding: 5px 0; font-size: 0.875em; border-top: 1px solid #F1EEE8; }
         dt {
-            float: left; width: 120px; padding-right: 5px;
+            padding-right: 5px;
             &:after { content: ': '; }
             &.sub { text-align: right; }
         }
