--- a/less/styles.less
+++ b/less/styles.less
@@ -82,8 +82,9 @@ div#direcoes {
                 list-style: none; margin: 0; padding-top: 0; padding-bottom: 0px; margin-left: -30px;
                 &.escondido { display: none; }
                 li {
-                    border: 0;
+                    border: 0; padding: 0;
                     &:nth-child(even) { background: none; }
+                    &:first-child { padding-top: 10px; }
                 }
             }
         }
