--- a/less/styles.less
+++ b/less/styles.less
@@ -158,6 +158,7 @@ div#direcoes {
             }
             span.texto { display: inline-block; }
         }
+        div.div_ruas { margin-left: 30px; }
     }
 }
 div.clearfix { .clearfix(); }
