Mais info dos transportes
Início do css, vamos ver se terei que alterar muito

--- a/less/styles.less
+++ b/less/styles.less
@@ -158,7 +158,11 @@ div#direcoes {
             }
             span.texto { display: inline-block; }
         }
-        div.div_ruas { margin-left: 30px; }
+        /* Informações dos transportes */
+        div.div_ruas {
+            margin-left: 30px;
+            span { font-weight: bold; }
+        }
     }
 }
 div.clearfix { .clearfix(); }
