Design para os itinerários

--- a/less/styles.less
+++ b/less/styles.less
@@ -64,6 +64,11 @@ div.info_trip {
     /* Se este a NÃO for um btn btn-[qualquer], um margin: 10 0; fica bom */
     a.esconder_info { margin: 10px 0; }
 }
+div.itinerarios {
+    ul {
+        list-style: none; margin: 0; padding: 0;
+    }
+}
 section.info_popup {
     font-size: 0.875em;
     div {
