--- a/less/styles.less
+++ b/less/styles.less
@@ -64,7 +64,6 @@ div.info_trip {
     a.esconder_info { margin: 10px 0; }
 }
 div.itinerarios {
-    margin-bottom: 20px;
     ul.ul_itinerarios {
         list-style: none; margin: 0; padding: 0;
         li {
@@ -87,6 +86,8 @@ section.info_popup {
     }
 }
 div.direcoes {
+    /**/
+    margin-bottom: -40px;
     ul.direcoes {
         list-style: none; margin: 0; padding: 0;
         div.clearfix { height: 0; }
