--- a/less/styles.less
+++ b/less/styles.less
@@ -186,4 +186,28 @@ div.direcoes {
         }
     }
 }
+/* Instruções no mapa */
+div.leaflet-popup-content {
+    span.direcao {
+        height: 30px; display: inline-block; float: left; width: 30px;
+        &.CIRCLE_CLOCKWISE { background: url('../images/directions/circle_clockwise.png') no-repeat left top; }
+        &.CIRCLE_COUNTERCLOCKWISE { background: url('../images/directions/circle_counterclockwise.png') no-repeat left top; }
+        &.CLEAR { background: url('../images/directions/clear.png') no-repeat left top; }
+        &.CONTINUE { background: url('../images/directions/continue.png') no-repeat left top; }
+        &.ELEVATOR { background: url('../images/directions/elevator.png') no-repeat left top; }
+        &.EXIT_LEFT { background: url('../images/directions/exit_left.png') no-repeat left top; }
+        &.EXIT_RIGHT { background: url('../images/directions/exit_right.png') no-repeat left top; }
+        &.HARD_LEFT { background: url('../images/directions/hard_left.png') no-repeat left top; }
+        &.HARD_RIGHT { background: url('../images/directions/hard_right.png') no-repeat left top; }
+        &.LEFT { background: url('../images/directions/left.png') no-repeat left top; }
+        &.MERGE { background: url('../images/directions/merge.png') no-repeat left top; }
+        &.RIGHT { background: url('../images/directions/right.png') no-repeat left top; }
+        &.SLIGHTLY_LEFT { background: url('../images/directions/slightly_left.png') no-repeat left top; }
+        &.SLIGHTLY_RIGHT { background: url('../images/directions/slightly_right.png') no-repeat left top; }
+        &.TURN_LEFT { background: url('../images/directions/turn_left.png') no-repeat left top; }
+        &.TURN_RIGHT { background: url('../images/directions/turn_right.png') no-repeat left top; }
+        &.UTURN_LEFT { background: url('../images/directions/uturn_left.png') no-repeat left top; }
+        &.UTURN_RIGHT { background: url('../images/directions/uturn_right.png') no-repeat left top; }
+    }
+}
 div.clearfix { .clearfix(); }
