Alteração do CSS (popup do mapa)

--- a/less/styles.less
+++ b/less/styles.less
@@ -33,6 +33,7 @@ body {
 .leaflet-contextmenu-separator { border-bottom: 1px solid #ccc; margin: 5px 0 }
 /* Menu com o botão direito FIM */
 div.instrucoes { width: 100px; height: 100px; background: #F30; display: none; }
+.leaflet-popup-content { min-width: 55px; }
 /* Informações globais */
 div.info_trip {
     border: 1px solid #CCC; padding: 10px; /*display: none;*/
