Alterações de bugs

--- a/less/styles.less
+++ b/less/styles.less
@@ -12,10 +12,13 @@
 /* Funções FIM */
 div.escondido { display: none; margin-top: 15px; }
 body {
+    background: #FFF;
     //Mesma altura da barra de menus fixa do topo
     padding-top: 70px;
     div.container-full { width: 97%; margin: 0 auto; }
     div.mapa { min-height: 150px; }
+    div#sidebar { background: #FFF; }
+    /*a.mostrar { }*/
 }
 /* Menu com o botão direito INICIO */
 .leaflet-contextmenu {
