--- a/less/mobile.less
+++ b/less/mobile.less
@@ -16,61 +16,205 @@ body {
     //Mesma altura da barra de menus fixa do topo
     padding-top: 0px;
     div.container-full {
-      width: 97.8%; margin: 0 auto;
-      .divs_topo(@zIndex) {
+      width: 100%; margin: 0 auto;
+      .divs_position(@zIndex) {
         position: absolute; z-index: @zIndex;
       }
-      div.topo {
-       .divs_topo(9000); background: #FFF; display: none; border-bottom: 1px solid #CCC; box-shadow: 5px 5px 10px #888; width: 100%;
+      div.esquerda {
+       .divs_position(9000); background: #FFF; border-right: 1px solid #CCC; box-shadow: 5px 5px 10px #888; width: 15px; height: 100%; opacity: 0.9;
         article {
-          padding: 10px;
-        }
-        footer {
-          bottom: 0; left: 50%; position: absolute; text-align: center;
-        }
-      }
-      div.mostra_me_topo {
-        .divs_topo(9001); text-align: center; width: 100%;
-        a {
-          background: #333; opacity: 1; display: inline-block; padding: 5px 15px; border-bottom: 1px solid #CCC; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; box-shadow: 3px 3px 5px #888;
-          i { color: #FFF; }
-          &:hover {
-            background: #FFF;
-            i { color: #333; }
+          padding: 10px; padding-right: 20px;
+          /* Informações globais */
+          div.info_trip {
+              border: 1px solid #CCC; padding: 10px; /*display: none;*/
+              dl {
+                  margin: 0;
+                  dt, dd { padding: 5px 0; font-size: 0.875em; border-top: 1px solid #F1EEE8; }
+                  dt {
+                      padding-right: 5px;
+                      &:after { content: ': '; }
+                      &.sub { text-align: right; }
+                  }
+                  dd {
+                      &.sub { /**/ }
+                      &.link {
+                          cursor: pointer;
+                          span.baixo:after { content: '↓'; padding-right: 5px; }
+                          span.cima:after { content: '↑'; padding-right: 5px; }
+                          &:hover { color: #F30; }
+                      }
+                  }
+                  dt.sub, dd.sub { font-size: 0.75em; border-top: 0; display: none; }
+                  dt.primeiro, dd.primeiro { border-top: 0; }
+              }
+              span.info { display: block; }
+              /* Se este a NÃO for um btn btn-[qualquer], um margin: 10 0; fica bom */
+              a.esconder_info { margin: 10px 0; }
+          }
+          div.itinerarios {
+              ul.ul_itinerarios {
+                  list-style: none; margin: 0; padding: 0;
+                  li {
+                      padding: 10px 0; background: #F1EEE8; border-top: 1px solid #CCC; padding-left: 10px; font-size: 0.875em; cursor: pointer;
+                      &:first-child { border-top: 0; }
+                      a {
+                          color: #333;
+                          &:hover { color: #333; text-decoration: none; }
+                      }
+                      &:hover, &.selecionado { background: #E4E4E4; }
+                      span.duracao { padding-right: 5px; }
+                  }
+              }
+          }
+          section.info_popup {
+              font-size: 0.875em;
+              div {
+                  border-top: 1px solid #F1EEE8; padding-top: 5px; padding-bottom: 5px;
+                  &.first { border-top: 0; }
+              }
+          }
+          div.direcoes {
+              /**/
+              margin-bottom: -40px;
+              ul.direcoes {
+                  list-style: none; margin: 0; padding: 0;
+                  div.clearfix { height: 0; }
+                  li {
+                      line-height: 20px; padding: 10px 0; cursor: pointer; font-size: 0.875em; border-top: 1px solid #CCC;
+                      &:nth-child(even) { background: #F1EEE8; }
+                      &:first-child { border-top: 0; }
+                      ul {
+                          list-style: none; margin: 0; padding-top: 0; padding-bottom: 0; margin-left: -30px;
+                          &.escondido {
+                              display: none;
+                              div.clearfix { height: auto; }
+                          }
+                          li {
+                              border: 0; padding: 0;
+                              &:nth-child(even) { background: none; }
+                              &:first-child { padding-top: 10px; }
+                          }
+                      }
+                  }
+                  /* Para a API da OneTripPlanner */
+                  &[data-api="resultados_otp"] {
+                      span.norte_sul {
+                          display: inline-block; width: 30px; height: 30px; float: left; display: none;
+                          &.EAST { background: #333; }
+                          &.WEST { background: #F30; }
+                          &.NORTH { background: #CCC; }
+                          &.NORTHEAST { background: #999; }
+                          &.NORTHWEST { background: #333; }
+                          &.SOUTH { background: #F30; }
+                          &.SOUTHEAST { background: #CCC; }
+                          &.SOUTHWWEST { background: #999; }
+                      }
+                      span.modos { display: inline-block; width: 20px; height: 20px; margin-right: 10px; float: left; }
+                      span.modo_BUS { background: url('../images/mode/bus.png') no-repeat left top; }
+                      span.modo_WALK { background: url('../images/mode/walk.png') no-repeat left top; }
+                      span.modo_BICYCLE { background: url('../images/mode/bicycle.png') no-repeat left top; }
+                      span.direcao {
+                          height: 30px; display: inline-block; float: left;
+                          &.CIRCLE_CLOCKWISE { background: url('../images/directions/circle_clockwise.png') no-repeat left top; }
+                          &.CIRCLE_COUNTERCLOCKWISE { background: url('../images/directions/circle_counterclockwise.png') no-repeat left top; }
+                          &.CLEAR { background: url('../images/directions/clear.png') no-repeat left top; }
+                          &.CONTINUE { background: url('../images/directions/continue.png') no-repeat left top; }
+                          &.ELEVATOR { background: url('../images/directions/elevator.png') no-repeat left top; }
+                          &.EXIT_LEFT { background: url('../images/directions/exit_left.png') no-repeat left top; }
+                          &.EXIT_RIGHT { background: url('../images/directions/exit_right.png') no-repeat left top; }
+                          &.HARD_LEFT { background: url('../images/directions/hard_left.png') no-repeat left top; }
+                          &.HARD_RIGHT { background: url('../images/directions/hard_right.png') no-repeat left top; }
+                          &.LEFT { background: url('../images/directions/left.png') no-repeat left top; }
+                          &.MERGE { background: url('../images/directions/merge.png') no-repeat left top; }
+                          &.RIGHT { background: url('../images/directions/right.png') no-repeat left top; }
+                          &.SLIGHTLY_LEFT { background: url('../images/directions/slightly_left.png') no-repeat left top; }
+                          &.SLIGHTLY_RIGHT { background: url('../images/directions/slightly_right.png') no-repeat left top; }
+                          &.TURN_LEFT { background: url('../images/directions/turn_left.png') no-repeat left top; }
+                          &.TURN_RIGHT { background: url('../images/directions/turn_right.png') no-repeat left top; }
+                          &.UTURN_LEFT { background: url('../images/directions/uturn_left.png') no-repeat left top; }
+                          &.UTURN_RIGHT { background: url('../images/directions/uturn_right.png') no-repeat left top; }
+                      }
+                      ul.escondido li span { width: 30px; }
+                  }
+                  /* Para a API da Cloudmade */
+                  &[data-api="resultados_cloudmade"] {
+                      /* Ainda sem uso */
+                      span.norte_sul {
+                          display: inline-block; width: 30px; height: 30px; float: left; display: none;
+                          &.E { background: #333; }
+                          &.W { background: #F30; }
+                          &.N { background: #CCC; }
+                          &.NE { background: #999; }
+                          &.NW { background: #333; }
+                          &.S { background: #F30; }
+                          &.SE { background: #CCC; }
+                          &.SW { background: #999; }
+                      }
+                      span.direcao {
+                          width: 30px; height: 30px; display: inline-block; float: left;
+                          &.C { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/C.png') no-repeat left top; }
+                          &.TL { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/TL.png') no-repeat left top; }
+                          &.TSLL { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/TSLL.png') no-repeat left top; }
+                          &.TSHL { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/TSHL.png') no-repeat left top; }
+                          &.TR { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/TR.png') no-repeat left top; }
+                          &.TSLR { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/TSLR.png') no-repeat left top; }
+                          &.TSHR { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/TSHR.png') no-repeat left top; }
+                          &.TU { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/TU.png') no-repeat left top; }
+                          &.EXIT1 { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/EXIT1.png') no-repeat left top; }
+                          &.EXIT2 { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/EXIT2.png') no-repeat left top; }
+                          &.EXIT3 { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/EXIT3.png') no-repeat left top; }
+                          &.EXIT4 { background: url('http://tile.cloudmade.com/wml/latest/images/routing/arrows/EXIT4.png') no-repeat left top; }
+                      }
+                      span.texto { display: inline-block; }
+                  }
+                  /* Informações dos transportes */
+                  div.div_ruas {
+                      margin-left: 30px;
+                      span { font-weight: bold; }
+                  }
+              }
           }
         }
-      }
-      div.esconde_me {
-        .divs_topo(9000); display: none;
+        footer {
+          right: 0; top: 50%; position: absolute; text-align: center;
+        }
       }
 
-      div.rodape {
-        .divs_topo(9000); background: #FFF; display: none; border-top: 1px solid #CCC; box-shadow: 5px 5px 10px #888; width: 100%; bottom: 0; opacity: 0.9;
-        header, footer {
-          top: 0; left: 50%; position: absolute; text-align: center; margin-bottom: 10px;
-        }
+      div.direita {
+        .divs_position(9000); background: #FFF; border-left: 1px solid #CCC; box-shadow: -5px 5px 10px #888; width: 15px; right: 0; opacity: 0.9; height: 100%;
         footer {
-          bottom: 0; top: auto;
+          left: 0; top: 50%; position: absolute;
         }
         article {
-          padding: 10px; padding-top: 20px; overflow-y: scroll; height: 300px;
+          padding: 10px; padding-left: 20px;
         }
       }
-      div.mostra_me_rodape {
-        .divs_topo(9001); text-align: center; width: 100%; bottom: 0;
-        a {
-          background: #333; opacity: 1; display: inline-block; padding: 5px 15px; border-bottom: 1px solid #CCC; border-top-left-radius: 5px; border-top-right-radius: 5px; box-shadow: 3px 3px 5px #888;
-          i { color: #FFF; }
-          &:hover {
-            background: #FFF;
-            i { color: #333; }
+      div.mapa { min-height: 150px; margin-left: 15px; }
+
+      /* Instruções no mapa */
+      div.leaflet-popup-content {
+          span.direcao {
+              height: 30px; display: inline-block; float: left; width: 30px;
+              &.CIRCLE_CLOCKWISE { background: url('../images/directions/circle_clockwise.png') no-repeat left top; }
+              &.CIRCLE_COUNTERCLOCKWISE { background: url('../images/directions/circle_counterclockwise.png') no-repeat left top; }
+              &.CLEAR { background: url('../images/directions/clear.png') no-repeat left top; }
+              &.CONTINUE { background: url('../images/directions/continue.png') no-repeat left top; }
+              &.ELEVATOR { background: url('../images/directions/elevator.png') no-repeat left top; }
+              &.EXIT_LEFT { background: url('../images/directions/exit_left.png') no-repeat left top; }
+              &.EXIT_RIGHT { background: url('../images/directions/exit_right.png') no-repeat left top; }
+              &.HARD_LEFT { background: url('../images/directions/hard_left.png') no-repeat left top; }
+              &.HARD_RIGHT { background: url('../images/directions/hard_right.png') no-repeat left top; }
+              &.LEFT { background: url('../images/directions/left.png') no-repeat left top; }
+              &.MERGE { background: url('../images/directions/merge.png') no-repeat left top; }
+              &.RIGHT { background: url('../images/directions/right.png') no-repeat left top; }
+              &.SLIGHTLY_LEFT { background: url('../images/directions/slightly_left.png') no-repeat left top; }
+              &.SLIGHTLY_RIGHT { background: url('../images/directions/slightly_right.png') no-repeat left top; }
+              &.TURN_LEFT { background: url('../images/directions/turn_left.png') no-repeat left top; }
+              &.TURN_RIGHT { background: url('../images/directions/turn_right.png') no-repeat left top; }
+              &.UTURN_LEFT { background: url('../images/directions/uturn_left.png') no-repeat left top; }
+              &.UTURN_RIGHT { background: url('../images/directions/uturn_right.png') no-repeat left top; }
           }
-        }
       }
-      div.esconde_me {
-        .divs_topo(9000); display: none;
-      }
-      div.mapa { min-height: 150px; }
     }
 }
 /* Menu com o botão direito INICIO */
@@ -89,3 +233,26 @@ body {
 .leaflet-contextmenu-separator { border-bottom: 1px solid #ccc; margin: 5px 0 }
 /* Menu com o botão direito FIM */
 .leaflet-popup-content { min-width: 55px; }
+ul.trip_viewer {
+  list-style: none; margin: 0; padding: 0; font-size: 0.875em;
+  li {
+    span {
+      &.paragem { display: inline-block; width: 32px; height: 32px; background: url('../images/trip-stop.png') no-repeat right top; float: left; }
+      &.nome { float: left; padding-left: 10px; padding-top: 6px; height: 32px; width: 93%; }
+    }
+    &:first-child {
+      span.paragem { background-image: url('../images/trip-stop-first.png'); }
+    }
+    &:last-child {
+      span.paragem { background-image: url('../images/trip-stop-last.png'); }
+    }
+    &.inicio, &.fim {
+      span {
+        background-color: #CCC;
+        &.paragem:before { content: url('../images/arrow.png'); padding: 8px 0 0 8px; display: inline-block; }
+      }
+    }
+    &.fim span.paragem:before { content: url('../images/arrow-left.png'); }
+    &.meu_caminho span { background-color: #CCC; }
+  }
+}
