--- a/less/mobile.less
+++ b/less/mobile.less
@@ -11,6 +11,7 @@
 }
 /* Funções FIM */
 div.escondido { display: none; margin-top: 15px; }
+div.clearfix { .clearfix(); }
 body {
   background: #FFF; overflow: hidden;
   //Mesma altura da barra de menus fixa do topo
@@ -143,6 +144,7 @@ body {
       }
     }
 
+    /* Formulário de opções de rotas */
     div.direita {
       .divs_position(9000); width: 40px; right: 0; height: 100%;
       footer {
