Clear e Título dos Detalhes

--- a/less/styles.less
+++ b/less/styles.less
@@ -11,7 +11,7 @@
 }
 /* Funções FIM */
 div.escondido { display: none; margin-top: 15px; }
-div.clearfix { .clearfix(); }
+div.clearfix, div.clear { .clearfix(); }
 body {
   background: #FFF; overflow: hidden;
   //Mesma altura da barra de menus fixa do topo
@@ -27,6 +27,7 @@ body {
         padding: 10px; margin-right: 35px; height: 100%; border-right: 1px solid #CCC; box-shadow: 5px 5px 10px #888; display: none;
         /* Informações globais */
         div.info_trip {
+          h4.titulo_detalhes { font-size: 1.25em; }
           border: 1px solid #CCC; padding: 10px;
           dl {
             margin: 0;
