Alteração dos ícones

--- a/less/styles.less
+++ b/less/styles.less
@@ -142,6 +142,9 @@ body {
       }
       footer {
         right: 0; top: 20%; position: absolute; text-align: center;
+        a.toggle_esquerda {
+          display: inline-block; width: 32px; height: 32px; text-indent: -10000em; background: url('../images/resultado.png') no-repeat left top;
+        }
       }
     }
 
@@ -150,6 +153,9 @@ body {
       .divs_position(9000); width: 40px; right: 0; height: 100%;
       footer {
         left: 0; bottom: 20%; position: absolute;
+        a.toggle_direita {
+          display: inline-block; width: 32px; height: 32px; text-indent: -10000em; background: url('../images/configuracoes.png') no-repeat left top;
+        }
       }
       article {
         padding: 10px; margin-left: 35px; height: 100%; box-shadow: -5px 5px 10px #888; display: none;
