Remoção de css não utilizado

--- a/less/styles.less
+++ b/less/styles.less
@@ -141,7 +141,7 @@ body {
         }
       }
       footer {
-        right: 0; top: 20%; position: absolute; text-align: center;
+        right: 0; top: 20%; position: absolute;
         a.toggle_esquerda {
           display: inline-block; width: 32px; height: 32px; text-indent: -10000em; background: url('../images/resultado.png') no-repeat left top;
         }
