Otimizações para mobile

--- a/less/styles.less
+++ b/less/styles.less
@@ -241,4 +241,7 @@ body {
 @media screen and (min-device-width: 0px) and (max-device-width: 760px) {
   h4.titulo_detalhes { font-size: 0.875em; }
   dl dt.sub { text-align: left; }
+  ul.trip_viewer {
+    span.nome { width: 86%; }
+  }
 }
